@@ -3,9 +3,7 @@
 // terms of the GNU General Public License v2.
 //
 // Copyright (c)
-//   Wolfgang Frisch <xororand@users.sourceforge.net>
-//   Emil Beinroth <emilbeinroth@gmx.net>
 //   Martin Väth <vaeth@mathematik.uni-wuerzburg.de>
 
-#define VERSIONSORT_BINARY 1
+#define DROP_PERMISSIONS_BINARY 1
 #include "main.cc"
