@@ -1,0 +1,9 @@
+// vim:set noet cinoptions= sw=4 ts=4:
+// This file is part of the eix project and distributed under the
+// terms of the GNU General Public License v2.
+//
+// Copyright (c)
+//   Martin Väth <vaeth@mathematik.uni-wuerzburg.de>
+
+#define VERSIONSORT_BINARY 1
+#include "main.cc"
